[AI Fix] (a11y ADA compliance): darken footer email link text to clear remaining contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -241,7 +241,7 @@
 }
 
 .footer-col .u-email {
-  color: #767676;
+  color: #757575;
 }
 
 .post-link {
